--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   location: ^5.0.0
   flutter_polyline_points: ^2.0.0
+  flutter_local_notifications: 17.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
